# visl_lib_dart

./: .gitmodules  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/visl_lib_dart/: VislLibDartPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: visl_lib_dart.podspec
ios/Classes/: SwiftVislLibDartPlugin.swift  VislLibDartPlugin.h  VislLibDartPlugin.m
lib/: visl_lib_dart.dart  visl_lib_dart_method_channel.dart  visl_lib_dart_platform_interface.dart
linux/: CMakeLists.txt  visl_lib_dart_plugin.cc
linux/include/visl_lib_dart/: visl_lib_dart_plugin.h
macos/: visl_lib_dart.podspec
macos/Classes/: VislLibDartPlugin.swift
test/: visl_lib_dart_method_channel_test.dart  visl_lib_dart_test.dart
windows/: CMakeLists.txt  visl_lib_dart_plugin.cpp  visl_lib_dart_plugin.h  visl_lib_dart_plugin_c_api.cpp
windows/include/visl_lib_dart/: visl_lib_dart_plugin_c_api.h
(+5 files in other folders)
